--- a/image_segmentation.ipynb
+++ b/image_segmentation.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Image segmentation test using OpenCV and the watershed algorithm**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -8,10 +15,113 @@
    "source": [
     "import numpy as np\n",
     "import cv2\n",
-    "from matplotlib import pyplot as plt\n",
-    "img = cv2.imread('coins.png')\n",
+    "from matplotlib import pyplot as plt\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Import image\n",
+    "img = cv2.imread('images/500um_2.jpg')\n",
     "gray = cv2.cvtColor(img,cv2.COLOR_BGR2GRAY)\n",
-    "ret, thresh = cv2.threshold(gray,0,255,cv2.THRESH_BINARY_INV+cv2.THRESH_OTSU)"
+    "plt.figure(figsize=(15,10))\n",
+    "plt.imshow(gray, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "** Detecting etched regions **"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Otsu thresholding:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Thresholding\n",
+    "ret, thresh = cv2.threshold(gray,0,255,cv2.THRESH_BINARY_INV+cv2.THRESH_OTSU)\n",
+    "\n",
+    "plt.figure\n",
+    "plt.hist(gray.ravel(),256)\n",
+    "plt.title(\"Intensity histogram\")\n",
+    "plt.figure(figsize=(20,13))\n",
+    "plt.imshow(thresh, cmap='gray')\n",
+    "plt.title(\"Otsu algorithm\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "edge_row, edge_col = np.where(thresh == 255)\n",
+    "gray_edges = gray\n",
+    "gray_edges[edge_row, edge_col] = gray[1000,2400]\n",
+    "print(gray[1000,2400])\n",
+    "plt.figure(figsize=(20,13))\n",
+    "plt.imshow(gray_edges, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# 2nd pass with otsu algorithm\n",
+    "ret2, thresh2 = cv2.threshold(gray_edges,0,255,cv2.THRESH_BINARY_INV+cv2.THRESH_OTSU)\n",
+    "\n",
+    "plt.figure\n",
+    "plt.hist(gray_edges.ravel(),256)\n",
+    "plt.title(\"Intensity histogram\")\n",
+    "plt.figure(figsize=(20,13))\n",
+    "plt.imshow(thresh2, cmap='gray')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Filtering and edge detection "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Filter\n",
+    "f_kernel = np.array([[-1,-1,-1],\n",
+    "                     [-1,9,-1],\n",
+    "                     [-1, -1, -1]])\n",
+    "gray_f = cv2.filter2D(gray, -1, f_kernel)\n",
+    "\n",
+    "plt.figure(figsize=(20,13))\n",
+    "plt.title(\"Grayscale filtered\")\n",
+    "plt.imshow(gray_f, cmap='gray')\n",
+    "\n",
+    "# Edge detection\n",
+    "edges = cv2.Canny(gray_f, 40, 90)\n",
+    "\n",
+    "plt.figure(figsize=(20,13))\n",
+    "plt.imshow(edges, cmap='gray')\n",
+    "plt.show()"
    ]
   },
   {
@@ -22,7 +132,7 @@
    "source": [
     "# noise removal\n",
     "kernel = np.ones((3,3),np.uint8)\n",
-    "opening = cv2.morphologyEx(thresh,cv2.MORPH_OPEN,kernel, iterations = 2)\n",
+    "opening = cv2.morphologyEx(th3,cv2.MORPH_OPEN,kernel, iterations = 2)\n",
     "# sure background area\n",
     "sure_bg = cv2.dilate(opening,kernel,iterations=3)\n",
     "# Finding sure foreground area\n",
@@ -30,7 +140,8 @@
     "ret, sure_fg = cv2.threshold(dist_transform,0.7*dist_transform.max(),255,0)\n",
     "# Finding unknown region\n",
     "sure_fg = np.uint8(sure_fg)\n",
-    "unknown = cv2.subtract(sure_bg,sure_fg)"
+    "unknown = cv2.subtract(sure_bg,sure_fg)\n",
+    "plt.imshow(unknown, cmap='gray')"
    ]
   },
   {
@@ -44,7 +155,8 @@
     "# Add one to all labels so that sure background is not 0, but 1\n",
     "markers = markers+1\n",
     "# Now, mark the region of unknown with zero\n",
-    "markers[unknown==255] = 0"
+    "markers[unknown==255] = 0\n",
+    "plt.imshow(unknown, cmap='gray')"
    ]
   },
   {
@@ -55,6 +167,15 @@
    "source": [
     "markers = cv2.watershed(img,markers)\n",
     "img[markers == -1] = [255,0,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.imshow(img,cmap='gray')"
    ]
   }
  ],
