--- a/unet_segmentation.ipynb
+++ b/unet_segmentation.ipynb
@@ -2,7 +2,17 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%load_ext autoreload\n",
+    "%autoreload 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,6 +28,17 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Not very elegant but removes all the warnings about deprecated upsample funtion\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -28,11 +49,12 @@
     "rescale_to = (128,128)\n",
     "split_samples = None\n",
     "top = True\n",
+    "pixel_weights = True\n",
     "\n",
     "use_set = 'set23'\n",
-    "bottom = './images/etching/'+use_set+'/bottom/'\n",
-    "top = './images/etching/'+use_set+'/top/'\n",
-    "mask = './images/etching/'+use_set+'/masks/'\n",
+    "bottom = './'+use_set+'/bottom/'\n",
+    "top = './'+use_set+'/top/'\n",
+    "mask = './'+use_set+'/masks/'\n",
     "# Original images\n",
     "transformations = transforms.Compose([Rescale(rescale_to), ToTensor()])\n",
     "etching_dataset = MicroscopeImageDataset(img_dir=[bottom, top], \n",
@@ -60,6 +82,21 @@
     "\n",
     "combined_dset = ConcatDatasets(etching_dataset, etching_dataset_bc, etching_dataset_rotate)\n",
     "print(\"Total nbr of samples: {0}\".format(len(combined_dset)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "axes = []\n",
+    "for i, sample in enumerate(combined_dset):\n",
+    "    if i==5:\n",
+    "        break\n",
+    "    fig = plt.figure(figsize=(14,8))\n",
+    "    sample = combined_dset[i]\n",
+    "    axes.append(visualize_sample(fig, sample, sample['weight']))"
    ]
   },
   {
@@ -140,11 +177,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Infere a sample\n",
-    "fig = plt.figure(figsize=(14,8))\n",
-    "i = 27\n",
-    "sample, infered_mask = combined_dset.infer(i, model)\n",
-    "axes = visualize_sample(fig, sample, infered_mask)\n"
+    "# Infere some samples\n",
+    "axes = []\n",
+    "for i, sample in enumerate(combined_dset):\n",
+    "    if i==20:\n",
+    "        break\n",
+    "    fig = plt.figure(figsize=(14,8))\n",
+    "    sample, infered_mask = combined_dset.infer(i, model, use_cuda=True)\n",
+    "    axes.append(visualize_sample(fig, sample, infered_mask))\n",
+    "\n"
    ]
   },
   {
